# operating-systems

./: README.md
OS_lab1/: CMakeLists.txt  README.md
OS_lab1/src/: Creator.cpp  Reporter.cpp  main.cpp  tests.cpp
OS_lab2/: CMakeLists.txt  README.md
OS_lab2/include/: average.h  min_max.h
OS_lab2/src/: average.cpp  main.cpp  min_max.cpp
OS_lab2/tests/: test.cpp
Os_Lab3 (Synchronization Thread)/: ThreadSynchronization.sln
Os_Lab3 (Synchronization Thread)/ThreadSynchronization/: ThreadSynchronization.vcxproj  ThreadSynchronization.vcxproj.filters  main.cpp  marker.cpp  marker.h
Os_Lab4 (Synchronization Process)/: ProcessSynchronization.sln
Os_Lab4 (Synchronization Process)/contracts/: Constants.h  contracts.vcxproj  contracts.vcxproj.filters
Os_Lab4 (Synchronization Process)/receiver/: receiver.cpp  receiver.vcxproj  receiver.vcxproj.filters
Os_Lab4 (Synchronization Process)/sender/: sender.cpp  sender.vcxproj  sender.vcxproj.filters
Os_lab5/: FinalLab.sln
Os_lab5/Client/: Client.cpp  Client.vcxproj
Os_lab5/Contracts/: Contracts.vcxproj  Contracts.vcxproj.filters  Employee.h
Os_lab5/Server/: Server.cpp  Server.vcxproj
